<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimension"
    tools:context=".OBLogin">



    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:text="@string/tv_signup"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUser"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:hint="Usuario"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmail"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUser"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:hint="E-mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:hint="Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <CheckBox
            android:id="@+id/cbLoginIn"
            android:layout_width="131dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/loginIn"
            android:layout_marginLeft="18dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvFPassword"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/tv_fpassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSignUp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:background="@drawable/shape"
        style="@style/ButtonStraight"
        android:onClick="signIn"/>



</androidx.constraintlayout.widget.ConstraintLayout>